Fix modals cropping popup content (#697)

--- a/src/_common/modal/modal-global.styl
+++ b/src/_common/modal/modal-global.styl
@@ -23,7 +23,6 @@
 .modal-body
 	position: relative
 	padding: $modal-padding-xs
-	overflow: hidden
 
 .modal-footer
 	clearfix() // clear it in case folks use .pull-* classes on buttons
